--- a/thankyou.html
+++ b/thankyou.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Thank You - Barista Brew</title>
-  <link rel="stylesheet" href="checkout.css"> <!-- Optional: reuse your styles -->
+  <link rel="stylesheet" href="thankyou.css"> <!-- Optional: reuse your styles -->
   <style>
     body {
       background: url('Pictures/bg4.jpg') no-repeat center center fixed;
